# HookProcessEvent

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/release/: output-metadata.json
app/src/androidTest/java/com/orng/maoer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ptrace
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/: dobby.h  logUtils.h
app/src/main/cpp/include/PtraceInject/: inject.cpp  pmparser.c  pmparser.h
app/src/main/cpp/include/PtraceInject/include/: PtraceInject.h  hook.h
app/src/main/cpp/include/PtraceInject/include/Utils/: PtraceUtils.h  Utils.h
app/src/main/cpp/src/: Hook.cpp  Hook.h
app/src/main/java/com/orng/maoer/activity/: MainActivity.java
app/src/main/java/com/orng/maoer/utils/: LogUtils.java
app/src/main/res/drawable-v24/: button_shape.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  themes.xml
app/src/main/res/values-night/: styles.xml  themes.xml
app/src/test/java/com/orng/maoer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
